--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
 # Mac OS-X
 .DS_Store
-
-# Node / NPM
-node_modules/
-
-# Bower
-bower_components/
-
-# Distribution files
-dist/
-
-# Jekyll
-_site/
+LICENSE
+package.json
+firebase.json
